--- a/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.html
+++ b/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.html
@@ -1,1 +1,120 @@
-<p>buscador-proyecto works!</p>
+<!-- header -->
+<div class="top-header-area" id="sticker">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-sm-12 text-center">
+        <div class="main-menu-wrap">
+
+          <!-- menu start -->
+          <nav class="main-menu">
+            <ul>
+              <li class="current-list-item"><a routerLink="/home">Home</a></li>
+              <li><a >Proyectos</a></li>
+              <li><a >Solicitudes</a>
+                <ul class="sub-menu">
+                  <li><a routerLink="/solicitudT">Trabajadores</a></li>
+                  <li><a routerLink="/solicitudC">Contactos</a></li>
+                </ul>
+              </li>
+              <li><a class="mobile-hide" ><i class="fas fa-user"></i></a>
+                <ul class="sub-menu" href="#">
+                  <li><a routerLink="/perfil">Modificar Perfil</a></li>
+                  <li><a routerLink="">Cerrar Sesion</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+
+          <!-- menu end -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end header -->
+
+<!-- breadcrumb-section -->
+<div class="breadcrumb-section breadcrumb-bg">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 offset-lg-2 text-center">
+        <div class="breadcrumb-text">
+          <p>We sale fresh fruits</p>
+          <h1>Proyectos</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end breadcrumb section -->
+<!-- products -->
+<div class="product-section mt-150 mb-150">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="product-filters">
+          <ul>
+            <li class="active" data-filter="*">Todos</li>
+            <li data-filter=".strawberry">Aprobados</li>
+            <li data-filter=".berry">Desaprobados</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="row product-lists">
+      <div class="col-lg-4 col-md-6 text-center strawberry">
+        <div class="single-product-item">
+          <h3>Strawberry</h3>
+          <p class="product-price"><span>Per Kg</span> 85$ </p>
+          <a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <div class="pagination-wrap">
+          <ul>
+            <li><a href="#">Prev</a></li>
+            <li><a href="#">1</a></li>
+            <li><a class="active" href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">Next</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end products -->
+
+
+
+<!-- footer -->
+<div class="footer-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-6">
+        <div class="footer-box about-widget">
+          <h2 class="widget-title">Nosotros</h2>
+          <p>Establecida por un grupo de profesionales con experiencia en sistemas y tecnologia, ASSETEC proporciona soluciones flexibles y personalizadas adaptadas a los requisitos particulares de nuestros clientes que permiten que sus negocios establezcan y mejoren sus procesos criticos en cada vertical de negocio.</p>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="footer-box get-in-touch">
+          <h2 class="widget-title">Contactanos</h2>
+          <ul>
+            <li>Lima 01 - Peru</li>
+            <li>info@assetec.org</li>
+            <li>+51 965 392565</li>
+            <li>+51 997 940001</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end footer -->
+
