--- a/assetecFront/src/app/home/home.component.html
+++ b/assetecFront/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 
 <!-- header -->
 <div class="top-header-area" id="sticker">
@@ -11,17 +11,17 @@
           <!-- menu start -->
           <nav class="main-menu">
             <ul>
-              <li class="current-list-item"><a href="#">Home</a></li>
-              <li><a routerLink="buscadorProyecto">Proyectos</a></li>
-              <li><a href="#">Solicitudes</a>
+              <li class="current-list-item"><a>Home</a></li>
+              <li><a routerLink="/buscador">Proyectos</a></li>
+              <li><a >Solicitudes</a>
                 <ul class="sub-menu">
-                  <li><a routerLink="solicitudT">Trabajadores</a></li>
-                  <li><a routerLink="solicitudC">Contactos</a></li>
+                  <li><a routerLink="/solicitudT">Trabajadores</a></li>
+                  <li><a routerLink="/solicitudC">Contactos</a></li>
                 </ul>
               </li>
-              <li><a class="mobile-hide" href="#"><i class="fas fa-user"></i></a>
-                <ul class="sub-menu">
-                  <li><a routerLink="perfil">Modificar Perfil</a></li>
+              <li><a class="mobile-hide" ><i class="fas fa-user"></i></a>
+                <ul class="sub-menu" href="#">
+                  <li><a routerLink="/perfil">Modificar Perfil</a></li>
                   <li><a routerLink="">Cerrar Sesion</a></li>
                 </ul>
               </li>
@@ -91,7 +91,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-6">
         <div class="footer-box about-widget">
-          <h2 class="widget-title">About us</h2>
+          <h2 class="widget-title">Nosotros</h2>
           <p>Establecida por un grupo de profesionales con experiencia en sistemas y tecnologia, ASSETEC proporciona soluciones flexibles y personalizadas adaptadas a los requisitos particulares de nuestros clientes que permiten que sus negocios establezcan y mejoren sus procesos criticos en cada vertical de negocio.</p>
         </div>
       </div>
@@ -110,6 +110,4 @@
   </div>
 </div>
 <!-- end footer -->
-=======
-<p>home works ga!</p>
->>>>>>> a4eeb6c69384bc864500fd4f3150ed6b750a44e8
+
