--- a/assetecFront/src/app/home/home.component.scss
+++ b/assetecFront/src/app/home/home.component.scss
@@ -1,3 +1,25 @@
 a:link, a:visited, a:active {
   text-decoration:none;
 }
+nav.main-menu ul li.current-list-item > a {
+  color: #F28123;
+}
+
+nav.main-menu ul li a:hover {
+  color: #F28123;
+}
+nav.main-menu ul li a {
+  color: #fff;
+  font-weight: 700;
+  display: block;
+  padding: 15px;
+}
+nav.main-menu ul ul.sub-menu li a {
+  color: #555;
+  padding: 8px;
+  font-size: 13px;
+  font-weight: 650 ;
+}
+ul.sub-menu li:hover a {
+  color: #F28123 !important;
+}
