--- a/assetecFront/src/app/actividad/actividad.component.html
+++ b/assetecFront/src/app/actividad/actividad.component.html
@@ -1,1 +1,141 @@
-<p>actividad works!</p>
+<!-- header -->
+<div class="top-header-area" id="sticker">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-sm-12 text-center">
+        <div class="main-menu-wrap">
+
+          <!-- menu start -->
+          <nav class="main-menu">
+            <ul>
+              <li class="current-list-item"><a routerLink="/home">Home</a></li>
+              <li><a routerLink="/buscador">Proyectos</a></li>
+              <li><a >Solicitudes</a>
+                <ul class="sub-menu">
+                  <li><a routerLink="/solicitudT">Trabajadores</a></li>
+                  <li><a routerLink="/solicitudC">Contactos</a></li>
+                </ul>
+              </li>
+              <li><a class="mobile-hide" ><i class="fas fa-user"></i></a>
+                <ul class="sub-menu" href="#">
+                  <li><a routerLink="/perfil">Modificar Perfil</a></li>
+                  <li><a routerLink="">Cerrar Sesion</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+
+          <!-- menu end -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end header -->
+<!-- breadcrumb-section -->
+<div class="breadcrumb-section breadcrumb-bg">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 offset-lg-2 text-center">
+        <div class="breadcrumb-text">
+          <p>Actividad</p>
+          <h1>Nombre</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end breadcrumb section -->
+<!-- cart banner section -->
+<section class="cart-banner pt-100 pb-100">
+  <div class="container">
+    <div class="row clearfix">
+
+      <!--Content Column-->
+      <div class="content-column col-lg-8">
+        <p class="top-sub">Estado</p>
+        <h3><span class="orange-text">Actividad</span> Nombre</h3>
+        <h4>Proyecto</h4>
+        <p class="blog-meta">
+          <span class="author"><i class="fas fa-clock"></i> HorasEstimada</span>
+          <span class="date"><i class="fas fa-sort-numeric-down"></i> Posicion</span>
+        </p>
+        <div class="text">Descripcion</div>
+        <!--Countdown Timer-->
+        <div class="time-counter"><div class="time-countdown clearfix" ><div class="counter-column"><div class="inner"><span class="count">FechaInicio</span>Fecha Inicio</div></div> <div class="counter-column"><div class="inner"><span class="count">FechaFin</span>Fecha Fin</div></div>  </div></div>
+      </div>
+      <!--Image Column-->
+      <div class="col-lg-4">
+        <div class="total-section">
+          <!--Tabla Roles-->
+          <table class="total-table">
+            <thead class="total-table-head">
+            <tr class="table-total-row">
+              <th>Roles</th>
+              <th></th>
+              <th></th>
+              <th>$$</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="total-data">
+              <td><strong>Nombre rol </strong></td>
+              <td>Cant</td>
+              <td>Horas</td>
+              <td>Costo</td>
+            </tr>
+            <tr class="total-data">
+              <td><strong>Shipping: </strong></td>
+              <td>$45</td>
+            </tr>
+            <tr class="total-data">
+              <td><strong>Total: </strong></td>
+              <td>$545</td>
+            </tr>
+            </tbody>
+          </table>
+
+          <div class="cart-buttons">
+            <p><input type="submit" routerLink="/asistencia" value="Asistencia"></p>
+            <p><input type="submit" routerLink="/comprobante" value="Registrar Comprobante"></p>
+            <p><input type="submit" routerLink="/gasto" value="Registrar Remuneracion"></p>
+            <p><input type="submit" value="Completar Actividad"></p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</section>
+<!-- end cart banner section -->
+
+
+<!-- footer -->
+<div class="footer-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-7 col-md-6">
+        <div class="footer-box about-widget">
+          <h2 class="widget-title">Nosotros</h2>
+          <p>Establecida por un grupo de profesionales con experiencia en sistemas y tecnologia, ASSETEC proporciona soluciones flexibles y personalizadas adaptadas a los requisitos particulares de nuestros clientes que permiten que sus negocios establezcan y mejoren sus procesos criticos en cada vertical de negocio.</p>
+        </div>
+      </div>
+      <div class="col-lg-2 col-md-6">
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="footer-box get-in-touch">
+          <h2 class="widget-title">Contactanos</h2>
+          <ul>
+            <li>Lima 01 - Peru</li>
+            <li>info@assetec.org</li>
+            <li>+51 965 392565</li>
+            <li>+51 997 940001</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end footer -->
+
+
