--- a/assetecFront/src/app/home/home.component.html
+++ b/assetecFront/src/app/home/home.component.html
@@ -89,11 +89,13 @@
 <div class="footer-area">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-6">
+      <div class="col-lg-7 col-md-6">
         <div class="footer-box about-widget">
           <h2 class="widget-title">Nosotros</h2>
           <p>Establecida por un grupo de profesionales con experiencia en sistemas y tecnologia, ASSETEC proporciona soluciones flexibles y personalizadas adaptadas a los requisitos particulares de nuestros clientes que permiten que sus negocios establezcan y mejoren sus procesos criticos en cada vertical de negocio.</p>
         </div>
+      </div>
+      <div class="col-lg-2 col-md-6">
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="footer-box get-in-touch">
