--- a/assetecFront/src/app/asistencia/asistencia.component.html
+++ b/assetecFront/src/app/asistencia/asistencia.component.html
@@ -1,1 +1,143 @@
-<p>asistencia works!</p>
+<!-- header -->
+<div class="top-header-area" id="sticker">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-sm-12 text-center">
+        <div class="main-menu-wrap">
+
+          <!-- menu start -->
+          <nav class="main-menu">
+            <ul>
+              <li class="current-list-item"><a routerLink="/home">Home</a></li>
+              <li><a routerLink="/buscador">Proyectos</a></li>
+              <li><a >Solicitudes</a>
+                <ul class="sub-menu">
+                  <li><a routerLink="/solicitudT">Trabajadores</a></li>
+                  <li><a routerLink="/solicitudC">Contactos</a></li>
+                </ul>
+              </li>
+              <li><a class="mobile-hide" ><i class="fas fa-user"></i></a>
+                <ul class="sub-menu" href="#">
+                  <li><a routerLink="/perfil">Modificar Perfil</a></li>
+                  <li><a routerLink="">Cerrar Sesion</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+
+          <!-- menu end -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end header -->
+<!-- breadcrumb-section -->
+<div class="breadcrumb-section breadcrumb-bg">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 offset-lg-2 text-center">
+        <div class="breadcrumb-text">
+          <p>Asistencia</p>
+          <h1>NombreActividad</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end breadcrumb section -->
+
+<!--Busqueda-->
+<div class="cart-section mt-150 mb-150">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <div class="coupon-section">
+          <div class="coupon-form-wrap">
+            <form class="d-inline">
+              <p><input type="text" placeholder="Rol"></p>
+              <p><input type="text" placeholder="Nombre"></p>
+              <p><input type="text" placeholder="Apellido"></p>
+              <p><input type="submit" value="Buscar"></p>
+            </form>
+          </div>
+        </div>
+        <div class="cart-table-wrap">
+          <table class="cart-table">
+            <thead class="cart-table-head">
+            <tr class="table-head-row">
+              <th ></th>
+              <th >Rol</th>
+              <th >C/H</th>
+              <th >DNI</th>
+              <th >Nombre</th>
+              <th >Apellido</th>
+              <th >HorasT</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="table-body-row">
+              <td class="product-remove"><a href="#"><i class="far fa-plus-square"></i></a></td>
+              <td >Practicante</td>
+              <td >Strawberry</td>
+              <td >$85</td>
+              <td >$85</td>
+              <td >$85</td>
+              <td >1</td>
+            </tr>
+            <tr class="table-body-row">
+              <td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
+              <td class="product-image"><img src="assets/img/products/product-img-2.jpg" alt=""></td>
+              <td class="product-name">Berry</td>
+              <td class="product-price">$70</td>
+              <td class="product-quantity"><input type="number" placeholder="0"></td>
+              <td class="product-total">1</td>
+            </tr>
+            <tr class="table-body-row">
+              <td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
+              <td class="product-image"><img src="assets/img/products/product-img-3.jpg" alt=""></td>
+              <td class="product-name">Lemon</td>
+              <td class="product-price">$35</td>
+              <td class="product-quantity"><input type="number" placeholder="0"></td>
+              <td class="product-total">1</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end cart -->
+
+
+<!-- footer -->
+<div class="footer-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-7 col-md-6">
+        <div class="footer-box about-widget">
+          <h2 class="widget-title">Nosotros</h2>
+          <p>Establecida por un grupo de profesionales con experiencia en sistemas y tecnologia, ASSETEC proporciona soluciones flexibles y personalizadas adaptadas a los requisitos particulares de nuestros clientes que permiten que sus negocios establezcan y mejoren sus procesos criticos en cada vertical de negocio.</p>
+        </div>
+      </div>
+      <div class="col-lg-2 col-md-6">
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="footer-box get-in-touch">
+          <h2 class="widget-title">Contactanos</h2>
+          <ul>
+            <li>Lima 01 - Peru</li>
+            <li>info@assetec.org</li>
+            <li>+51 965 392565</li>
+            <li>+51 997 940001</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end footer -->
+
+
+
