--- a/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.html
+++ b/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.html
@@ -39,7 +39,7 @@
     <div class="row">
       <div class="col-lg-8 offset-lg-2 text-center">
         <div class="breadcrumb-text">
-          <p>We sale fresh fruits</p>
+          <p>Assetec</p>
           <h1>Proyectos</h1>
         </div>
       </div>
@@ -66,13 +66,13 @@
     <div class="row product-lists">
       <div class="col-lg-4 col-md-6 text-center strawberry">
         <div class="single-product-item">
-          <h3>Strawberry</h3>
-          <p class="product-price"><span>Per Kg</span> 85$ </p>
-          <a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+          <p class="product-price">Nombre <span>Estado</span> </p>
+          <h3>Descripcion</h3>
+          <a routerLink="/proyecto" class="cart-btn"><i class="fas fa-info"></i> Mas informacion</a>
         </div>
       </div>
     </div>
-
+    <!--
     <div class="row">
       <div class="col-lg-12 text-center">
         <div class="pagination-wrap">
@@ -86,6 +86,7 @@
         </div>
       </div>
     </div>
+    -->
   </div>
 </div>
 <!-- end products -->
@@ -96,11 +97,13 @@
 <div class="footer-area">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-6">
+      <div class="col-lg-7 col-md-6">
         <div class="footer-box about-widget">
           <h2 class="widget-title">Nosotros</h2>
           <p>Establecida por un grupo de profesionales con experiencia en sistemas y tecnologia, ASSETEC proporciona soluciones flexibles y personalizadas adaptadas a los requisitos particulares de nuestros clientes que permiten que sus negocios establezcan y mejoren sus procesos criticos en cada vertical de negocio.</p>
         </div>
+      </div>
+      <div class="col-lg-2 col-md-6">
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="footer-box get-in-touch">
