--- a/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.scss
+++ b/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.scss
@@ -33,3 +33,11 @@ ul.sub-menu li:hover a {
 .mt-150{
   margin-top: 90px;
 }
+.single-product-item h3{
+  margin-bottom: 30px;
+  font-weight: 400;
+  font-size: 17px;
+}
+p.product-price span{
+  font-size: 13px;
+}
