--- a/assetecFront/src/app/asistencia/asistencia.component.html
+++ b/assetecFront/src/app/asistencia/asistencia.component.html
@@ -38,8 +38,8 @@
     <div class="row">
       <div class="col-lg-8 offset-lg-2 text-center">
         <div class="breadcrumb-text">
-          <p>Asistencia</p>
-          <h1>NombreActividad</h1>
+          <p >Asistencia</p>
+          <h1>Actividad</h1>
         </div>
       </div>
     </div>
@@ -52,15 +52,15 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-        <div class="coupon-section">
-          <div class="coupon-form-wrap">
-            <form class="d-inline">
-              <p><input type="text" placeholder="Rol"></p>
-              <p><input type="text" placeholder="Nombre"></p>
-              <p><input type="text" placeholder="Apellido"></p>
-              <p><input type="submit" value="Buscar"></p>
-            </form>
-          </div>
+        <h3 id="head"><span class="orange-text">Actividad</span> Nombre</h3>
+        <h4>Proyecto</h4>
+        <div class="coupon-form-wrap">
+          <form class="d-flex ">
+            <p><input type="text" placeholder="Rol"></p>
+            <p><input type="text" placeholder="Nombre"></p>
+            <p><input type="text" placeholder="Apellido"></p>
+            <p><input type="submit" value="Buscar"></p>
+          </form>
         </div>
         <div class="cart-table-wrap">
           <table class="cart-table">
@@ -77,29 +77,134 @@
             </thead>
             <tbody>
             <tr class="table-body-row">
-              <td class="product-remove"><a href="#"><i class="far fa-plus-square"></i></a></td>
+              <td class="product-remove"><a><i class="far fa-plus-square"></i></a></td>
               <td >Practicante</td>
-              <td >Strawberry</td>
-              <td >$85</td>
-              <td >$85</td>
-              <td >$85</td>
+              <td >4</td>
+              <td >77665544</td>
+              <td >Gustavo</td>
+              <td >Berdejo</td>
               <td >1</td>
             </tr>
             <tr class="table-body-row">
-              <td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-              <td class="product-image"><img src="assets/img/products/product-img-2.jpg" alt=""></td>
-              <td class="product-name">Berry</td>
-              <td class="product-price">$70</td>
-              <td class="product-quantity"><input type="number" placeholder="0"></td>
-              <td class="product-total">1</td>
+              <td class="product-remove"><a><i class="far fa-plus-square"></i></a></td>
+              <td >Practicante</td>
+              <td >4</td>
+              <td >77665544</td>
+              <td >Gustavo</td>
+              <td >Berdejo</td>
+              <td >1</td>
             </tr>
             <tr class="table-body-row">
+              <td class="product-remove"><a ><i class="far fa-plus-square"></i></a></td>
+              <td >Practicante</td>
+              <td >4</td>
+              <td >77665544</td>
+              <td >Gustavo</td>
+              <td >Berdejo</td>
+              <td >1</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Resultados-->
+<div class="cart-section mt-150 mb-150">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <div class="cart-table-wrap">
+          <table class="cart-table">
+            <thead class="cart-table-head">
+            <tr class="table-head-row">
+              <th >Rol</th>
+              <th >C/H</th>
+              <th >DNI</th>
+              <th >Nombre</th>
+              <th >ApellidoP</th>
+              <th >ApellidoM</th>
+              <th >HorasT</th>
+              <th >Fecha</th>
+              <th ></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="table-body-row">
+              <td >Practicante</td>
+              <td >4</td>
+              <td >77665544</td>
+              <td >Gustavo</td>
+              <td >Berdejo</td>
+              <td >Garay</td>
+              <td >20</td>
+              <td >29/11/2021</td>
+              <td class="product-remove"><a ><i class="far fa-window-close"></i></a></td>
+            </tr>
+            <tr class="table-body-row">
+              <td >Practicante</td>
+              <td >4</td>
+              <td >77665544</td>
+              <td >Gustavo</td>
+              <td >Berdejo</td>
+              <td >Garay</td>
+              <td >20</td>
+              <td >29/11/2021</td>
+              <td class="product-remove"><a ><i class="far fa-window-close"></i></a></td>
+            </tr>
+            <tr class="table-body-row">
+              <td >Practicante</td>
+              <td >4</td>
+              <td >77665544</td>
+              <td >Gustavo</td>
+              <td >Berdejo</td>
+              <td >Garay</td>
+              <td >20</td>
+              <td >29/11/2021</td>
               <td class="product-remove"><a href="#"><i class="far fa-window-close"></i></a></td>
-              <td class="product-image"><img src="assets/img/products/product-img-3.jpg" alt=""></td>
-              <td class="product-name">Lemon</td>
-              <td class="product-price">$35</td>
-              <td class="product-quantity"><input type="number" placeholder="0"></td>
-              <td class="product-total">1</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--Asistencia-->
+<div class="cart-section mt-150 mb-150">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-md-12">
+        <h3>Registrar Asistencia</h3>
+        <div class="cart-table-wrap">
+          <table class="cart-table">
+            <thead class="cart-table-head">
+            <tr class="table-head-row">
+              <th >Rol</th>
+              <th >C/H</th>
+              <th >DNI</th>
+              <th >Nombre</th>
+              <th >ApellidoP</th>
+              <th >ApellidoM</th>
+              <th >HorasT</th>
+              <th >Fecha</th>
+              <th ></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr class="table-body-row">
+              <td >Practicante</td>
+              <td >4</td>
+              <td >77665544</td>
+              <td >Gustavo</td>
+              <td >Berdejo</td>
+              <td >Garay</td>
+              <td ><input type="number" min="0" max="8" step="0.01" value="1"></td>
+              <td ><input type="date" ></td>
+              <td class="product-remove"><a href="#"><i class="far fa-plus-square"></i></a></td>
             </tr>
             </tbody>
           </table>
@@ -109,6 +214,7 @@
   </div>
 </div>
 <!-- end cart -->
+
 
 
 <!-- footer -->
