--- a/assetecFront/src/app/proyecto/proyecto.component.html
+++ b/assetecFront/src/app/proyecto/proyecto.component.html
@@ -17,7 +17,7 @@
                 </ul>
               </li>
               <li><a class="mobile-hide" ><i class="fas fa-user"></i></a>
-                <ul class="sub-menu" href="#">
+                <ul class="sub-menu" >
                   <li><a routerLink="/perfil">Modificar Perfil</a></li>
                   <li><a routerLink="">Cerrar Sesion</a></li>
                 </ul>
