--- a/assetecFront/src/app/resultados/resultados.component.html
+++ b/assetecFront/src/app/resultados/resultados.component.html
@@ -1,1 +1,132 @@
-<p>resultados works!</p>
+<!-- header -->
+<div class="top-header-area" id="sticker">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 col-sm-12 text-center">
+        <div class="main-menu-wrap">
+
+          <!-- menu start -->
+          <nav class="main-menu">
+            <ul>
+              <li class="current-list-item"><a routerLink="/home">Home</a></li>
+              <li><a routerLink="/buscador">Proyectos</a></li>
+              <li><a >Solicitudes</a>
+                <ul class="sub-menu">
+                  <li><a routerLink="/solicitudT">Trabajadores</a></li>
+                  <li><a routerLink="/solicitudC">Contactos</a></li>
+                </ul>
+              </li>
+              <li><a class="mobile-hide" ><i class="fas fa-user"></i></a>
+                <ul class="sub-menu">
+                  <li><a routerLink="/perfil">Modificar Perfil</a></li>
+                  <li><a routerLink="">Cerrar Sesion</a></li>
+                </ul>
+              </li>
+            </ul>
+          </nav>
+
+          <!-- menu end -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end header -->
+<!-- breadcrumb-section -->
+<div class="breadcrumb-section breadcrumb-bg">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 offset-lg-2 text-center">
+        <div class="breadcrumb-text">
+          <p>Proyecto</p>
+          <h1>Resultados</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end breadcrumb section -->
+<!-- single article section -->
+<div class="mt-150 mb-150">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="single-article-section">
+          <div class="single-article-text">
+
+            <p class="blog-meta">
+              <span class="author"><i class="fas fa-calendar"></i> Fecha Inicio - Fecha fin</span>
+            </p>
+            <h2>Nombre Proyecto</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint soluta, similique quidem fuga vel voluptates amet doloremque corrupti. Perferendis totam voluptates eius error fuga cupiditate dolorum? Adipisci mollitia quod labore aut natus nobis. Rerum perferendis, nobis hic adipisci vel inventore facilis rem illo, tenetur ipsa voluptate dolorem, cupiditate temporibus laudantium quidem recusandae expedita dicta cum eum. Quae laborum repellat a ut, voluptatum ipsa eum. Culpa fugiat minus laborum quia nam!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, praesentium, dicta. Dolorum inventore molestias velit possimus, dolore labore aliquam aperiam architecto quo reprehenderit excepturi ipsum ipsam accusantium nobis ducimus laudantium.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum est aperiam voluptatum id cupiditate quae corporis ex. Molestias modi mollitia neque magni voluptatum, omnis repudiandae aliquam quae veniam error! Eligendi distinctio, ab eius iure atque ducimus id deleniti, vel alias sint similique perspiciatis saepe necessitatibus non eveniet, quo nisi soluta.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt beatae nemo quaerat, doloribus obcaecati odio!</p>
+          </div>
+          <!--Firmas-->
+          <div class="row product-lists">
+            <div class="col-lg-4 col-md-6">
+              <div class="single-logo-item ">
+                <img src="assets/img/company-logos/1.png" alt="">
+                <p class="text-center">--------------------------------------------------------------</p>
+                <p class="text-center">Gerente de Proyectos</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-logo-item ">
+                <img src="assets/img/company-logos/1.png" alt="">
+                <p class="text-center">--------------------------------------------------------------</p>
+                <p class="text-center">Gerente de Proyectos</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-logo-item ">
+                <img src="assets/img/company-logos/1.png" alt="">
+                <p class="text-center">--------------------------------------------------------------</p>
+                <p class="text-center">Gerente de Proyectos</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-logo-item ">
+                <img src="assets/img/company-logos/1.png" alt="">
+                <p class="text-center">--------------------------------------------------------------</p>
+                <p class="text-center">Gerente de Proyectos</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end single article section -->
+
+
+
+<!-- footer -->
+<div class="footer-area">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-7 col-md-6">
+        <div class="footer-box about-widget">
+          <h2 class="widget-title">Nosotros</h2>
+          <p>Establecida por un grupo de profesionales con experiencia en sistemas y tecnologia, ASSETEC proporciona soluciones flexibles y personalizadas adaptadas a los requisitos particulares de nuestros clientes que permiten que sus negocios establezcan y mejoren sus procesos criticos en cada vertical de negocio.</p>
+        </div>
+      </div>
+      <div class="col-lg-2 col-md-6">
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="footer-box get-in-touch">
+          <h2 class="widget-title">Contactanos</h2>
+          <ul>
+            <li>Lima 01 - Peru</li>
+            <li>info@assetec.org</li>
+            <li>+51 965 392565</li>
+            <li>+51 997 940001</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end footer -->
