--- a/assetecFront/src/app/acta-estado/acta-estado.component.html
+++ b/assetecFront/src/app/acta-estado/acta-estado.component.html
@@ -61,29 +61,17 @@
                   <h3>Acuerdo #</h3>
                   <p class="product-price"> <span>Descripcion</span> </p>
                 </div>
-                <div class="opciones align-items-center">
-                  <a ><i class="far fa-check-square"></i></a>
-                  <a ><i class="far fa-window-close"></i></a>
-                </div>
               </div>
               <div class="single-product-item d-flex">
                 <div class="acuerdo">
                   <h3>Acuerdo #</h3>
                   <p class="product-price"> <span>Descripcion</span> </p>
                 </div>
-                <div class="opciones align-items-center">
-                  <a ><i class="far fa-check-square"></i></a>
-                  <a ><i class="far fa-window-close"></i></a>
-                </div>
               </div>
               <div class="single-product-item d-flex">
                 <div class="acuerdo">
                   <h3>Acuerdo #</h3>
                   <p class="product-price"> <span>Descripcion</span> </p>
-                </div>
-                <div class="opciones align-items-center">
-                  <a ><i class="far fa-check-square"></i></a>
-                  <a ><i class="far fa-window-close"></i></a>
                 </div>
               </div>
             </div>
@@ -93,30 +81,64 @@
 
       <div class="col-lg-4">
         <div class="checkout-accordion-wrap">
-          <div class="accordion" id="accordionExample">
+          <div class="accordion" >
             <div class="card single-accordion">
               <div class="card-header" >
                 <h5 class="mb-0">
-                  <button class="btn btn-link" type="button" >
-                    Agregar nuevo acuerdo
-                  </button>
+                    Informacion del acta
                 </h5>
               </div>
               <div data-parent="#accordionExample">
                 <div class="card-body">
                   <div class="billing-address-form">
                     <form action="index.html">
-                      <p><textarea name="bill" id="bill" cols="30" rows="10" placeholder="Say Something"></textarea></p>
+                      <p class="name">Codigo</p>
+                      <p class="name">Fecha Envio</p>
+                      <p class="name">Numero de Acuerdos</p>
+                      <p class="name">Emisor</p>
+                      <p class="name">Destinatario</p>
                     </form>
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
-        <div class="cart-buttons">
-          <p><input type="submit" value="Enviar Acta"></p>
+        <div class="checkout-accordion-wrap">
+          <div class="accordion" >
+            <div class="card single-accordion">
+              <div class="card-header" >
+                <h5 class="mb-0">
+                  Aceptacion del acta
+                </h5>
+              </div>
+              <div data-parent="#accordionExample">
+                <div class="card-body d-flex">
+                  <div class="billing-address-form">
+                    <form action="index.html">
+                      <p class="name">Nombre Apellido Apellido</p>
+                      <p class="name">Nombre Apellido Apellido</p>
+                      <p class="name">Nombre Apellido Apellido</p>
+                    </form>
+                  </div>
+                  <div class="billing-address-form">
+                    <form action="index.html">
+                      <p class="name">DNI</p>
+                      <p class="name">DNI</p>
+                      <p class="name">DNI</p>
+                    </form>
+                  </div>
+                  <div class="billing-address-form">
+                    <form action="index.html">
+                      <p class="name">Estado</p>
+                      <p class="name">Estado</p>
+                      <p class="name">Estado</p>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
