--- a/assetecFront/src/app/acta-estado/acta-estado.component.scss
+++ b/assetecFront/src/app/acta-estado/acta-estado.component.scss
@@ -1,9 +1,3 @@
-.card-header h5 button::before {
-  left: 520px ;
-}
-.card-header h5 button {
-  text-align: center;
-}
 a:link, a:visited, a:active {
   text-decoration:none;
 }
@@ -26,6 +20,9 @@ nav.main-menu ul ul.sub-menu li a {
   font-size: 13px;
   font-weight: 650 ;
 }
+.acuerdo{
+  width: 819px;
+}
 #head{
   font-size: 40px;
   font-weight: 700;
@@ -33,29 +30,24 @@ nav.main-menu ul ul.sub-menu li a {
   line-height: 2.25rem;
   margin-bottom: 1rem;
 }
+.single-product-item {
+  padding: 20px;
+}
 h4 {
   font-weight: 300;
   text-transform: uppercase;
-}
-.blog-meta{
   margin-bottom: 2rem;
 }
-select {
-  border: 1px solid #ddd;
-  border-radius: 3px;
-  padding: 15px;
+.mb-0 {
+  background-color: #EFEFEF;
+  color: #051922;
+  font-size: 15px;
   width: 100%;
-  height: 57px;
+  text-align: left;
+  padding: 20px;
+  font-weight: 600;
 }
-.name{
-  height: 57px;
-  margin-bottom: 27px;
-  vertical-align: center;
+.checkout-accordion-wrap {
+  margin-bottom: 2rem;
 }
-input[type="number"] {
-  margin-bottom: 0px !important;
-}
-.billing-address-form form p textarea {
-  height: 199px;
 
-}
