--- a/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.html
+++ b/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.html
@@ -55,9 +55,9 @@
       <div class="col-md-12">
         <div class="product-filters">
           <ul>
-            <li class="active" (click)="filtro = '*'; buscar()">Todos</li>
-            <li (click)="filtro = 'PROCESO'; buscar()">En Proceso</li>
-            <li (click)="filtro = 'FINALIZADO'; buscar()">Finalizado</li>
+            <li class="active" (click)="buscar()">Todos</li>
+            <li (click)="buscar()">En Proceso</li>
+            <li (click)="buscar()">Finalizado</li>
           </ul>
         </div>
       </div>
