--- a/assetecFront/src/app/proyecto/proyecto.component.scss
+++ b/assetecFront/src/app/proyecto/proyecto.component.scss
@@ -37,11 +37,11 @@ tr.total-data td a div{
   display: inline-table;
 }
 #estado{
-  width: 80px;
-  color: black;
+  width: 50px;
+  font-color: black;
 }
 #actividad{
-  width: 300px;
+  width: 360px;
   color: black;
 }
 .cart-banner {
@@ -51,6 +51,7 @@ h3, .h3 {
   font-size: 2rem;
   font-weight: 700;
   line-height: 2.25rem;
+  margin-bottom: 4rem;
 }
 
 
