--- a/assetecFront/src/app/LlenarYEnviarActa/acta.component.html
+++ b/assetecFront/src/app/LlenarYEnviarActa/acta.component.html
@@ -9,7 +9,7 @@
           <nav class="main-menu">
             <ul>
               <li class="current-list-item"><a routerLink="/home">Home</a></li>
-              <li><a routerLink="/buscador">Proyectos</a></li>
+              <li><a (click)="buscar()" routerLink="/buscador">Proyectos</a></li>
               <li><a *ngIf="dataService.contacto == false">Solicitudes</a>
                 <ul class="sub-menu">
                   <li><a routerLink="/solicitudT">Trabajadores</a></li>
