--- a/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.html
+++ b/assetecFront/src/app/buscadorProyecto/buscador-proyecto.component.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div *ngIf="filtro == '*'" class="row product-lists">
-      <div *ngFor="let item of proyectos; let i = index" class="col-lg-4 col-md-6 text-center">
+      <div *ngFor="let item of dataService.proyectos; let i = index" class="col-lg-4 col-md-6 text-center ">
         <div class="single-product-item">
           <p class="product-price">{{item.nombre}} <span>{{item.estado}}</span> </p>
           <h3>{{item.descripcion}}</h3>
@@ -73,8 +73,8 @@
     </div>
 
     <div *ngIf="filtro != '*'" class="row product-lists">
-      <div *ngFor="let item of proyectos; let i = index">
-        <div *ngIf="item.estado == filtro" class="col-lg-4 col-md-6 text-center">
+      <div *ngFor="let item of dataService.proyectos; let i = index" class="filtrado">
+        <div *ngIf="item.estado == filtro" class="col-lg-4 col-md-6 text-center resultado">
           <div class="single-product-item">
             <p class="product-price">{{item.nombre}} <span>{{item.estado}}</span> </p>
             <h3>{{item.descripcion}}</h3>
