--- a/assetecFront/src/app/gasto/gasto.component.html
+++ b/assetecFront/src/app/gasto/gasto.component.html
@@ -9,8 +9,8 @@
           <nav class="main-menu">
             <ul>
               <li class="current-list-item"><a routerLink="/home">Home</a></li>
-              <li><a routerLink="/buscador">Proyectos</a></li>
-              <li><a >Solicitudes</a>
+              <li><a (click)="buscar()" routerLink="/buscador">Proyectos</a></li>
+              <li><a *ngIf="dataService.contacto == false">Solicitudes</a>
                 <ul class="sub-menu">
                   <li><a routerLink="/solicitudT">Trabajadores</a></li>
                   <li><a routerLink="/solicitudC">Contactos</a></li>
@@ -19,7 +19,7 @@
               <li><a class="mobile-hide" ><i class="fas fa-user"></i></a>
                 <ul class="sub-menu" href="#">
                   <li><a routerLink="/perfil">Modificar Perfil</a></li>
-                  <li><a routerLink="">Cerrar Sesion</a></li>
+                  <li><a (click)="cerrarSesion()" routerLink="">Cerrar Sesion</a></li>
                 </ul>
               </li>
             </ul>
@@ -51,9 +51,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <p class="top-sub">Tipo Actividad</p>
-        <h3 id="head"><span class="orange-text">Actividad</span> Nombre</h3>
-        <h4>Proyecto</h4>
+        <p class="top-sub" *ngIf="dataService.actividad.codActividadPadre == null">ACTIVIDAD PADRE</p>
+        <p class="top-sub" *ngIf="dataService.actividad.codActividadPadre != null">ACTIVIDAD HIJA</p>
+        <h3 id="head" >{{dataService.actividad.nombre}}</h3>
+        <h4>{{dataService.actividad.proyecto.nombre}}</h4>
         <div class="checkout-accordion-wrap">
           <div class="accordion" id="accordionExample">
             <div class="card single-accordion">
@@ -66,17 +67,17 @@
                 </div>
                 <div class="billing-address-form col-lg-6">
                   <form >
-                    <p><input type="number" min="0" step="0.01"></p>
-                    <p><select>
-                      <option>PEN</option>
-                      <option>USD</option>
+                    <p><input type="number" min="0" step="0.01" [(ngModel)]="remuneracion.maximaRemuneracion" ></p>
+                    <p><select [(ngModel)]="remuneracion.nombreMoneda">
+                      <option>SOLES</option>
+                      <option>DOLARES</option>
                     </select></p>
                   </form>
                 </div>
               </div>
               <div class="card-header align-items-center" id="headingOne">
                 <h5 class="mb-0">
-                  <button class="btn btn-link" type="button">
+                  <button class="btn btn-link" type="button" (click)="crearGasto()">
                     Registrar Remuneracion
                   </button>
                 </h5>
