--- a/assetecFront/src/app/resultados/resultados.component.scss
+++ b/assetecFront/src/app/resultados/resultados.component.scss
@@ -1,6 +1,8 @@
 .single-logo-item {
   max-width: 370px;
   margin: 25px;
+  display: inline-block;
+  text-align: center;
 }
 .single-logo-item img{
   height: 130px;
@@ -37,3 +39,12 @@ nav.main-menu ul ul.sub-menu li a {
   font-size: 13px;
   font-weight: 650 ;
 }
+
+h3, .h3 {
+  font-size: 70px;
+  font-weight: 700;
+  line-height: 2.25rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
